--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
           </div>
         </div>
       </nav>
@@ -70,14 +67,14 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img height="600px" width="5200px" src="https://www.targetadmission.com/img/colleges/newc/1402-760829.jpg" class="d-block w-100" alt="...">
+        <img height="600px" width="5200px" src="https://images.static-collegedunia.com/public/college_data/images/campusimage/1470047877lab1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5> </h5>
           <p> </p>
         </div>
       </div>
       <div class="carousel-item">
-        <img height="600px" width="5200px" src="https://rajagiri.edu/uploads/programs-offered/2/image.jpg" class="d-block w-100" alt="...">
+        <img height="600px" width="5200px" src="https://content3.jdmagicbox.com/comp/ernakulam/10/0484p484std3000510/catalogue/rajagiri-college-of-social-sciences-kalamassery-ernakulam-institutes-1wbetjem9v.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5> </h5>
           <p> </p>
